--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 personal training experience have provided a great platform to support individuals to change their lives
                 irrespective of age, weight, fitness levels or physical ability.</p>
         </div>
-        <img src="images/richard.jpg" alt="Richard Wilder" class="about-image">
+        <img src="images/1.jpeg" alt="Richard Wilder" class="about-image">
     </section>
 
     <section id="contact-insta" class="container py-5 d-flex align-items-start">
