--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
         <div class="flex-grow-1">
             <h2>What I Offer</h2>
             <ul>
-                <li>One-on-One HYROX Training</li>
-                <li>Buddy Training: Bring a partner at no extra cost</li>
-                <li>Sports Massage & Recovery</li>
+                <li>One-to-One HYROX Coaching</li>
+                <li>HYROX Taster Sessions</li>
+                <li>Sports Massage</li>
                 <li>Corporate Group Training</li>
                 <li>Running & Rowing Coaching</li>
             </ul>
@@ -273,12 +273,13 @@
     <section id="about" class="container py-5 d-flex align-items-center">
         <div class="about-text">
             <h2>About Me</h2>
-            <p>I'm Richard, a 50-something personal trainer based in Cardiff. When I was younger, I was fortunate enough
-                to represent Wales and Great Britain competing worldwide at many international competitions.</p>
-            <p>Like everyone, I am still working hard to fight off the inevitable ageing process with the usual aches
-                and pains that come with age. This perspective, my athletic experience, and building 20 years of
-                personal training experience have provided a great platform to support individuals to change their lives
-                irrespective of age, weight, fitness levels or physical ability.</p>
+            <p>I'm Richard, a 50-something personal trainer and HYROX performance coach based in Cardiff. Back in the day, I was lucky enough to represent Wales and Great Britain, competing in international athletics – and I’ve never really stopped moving since.
+            </P><p>
+These days, as well as chasing medals, I’m chasing longevity – working around the usual aches and niggles that come with age. I know first-hand what it takes to stay strong, injury-free, and motivated as we get older.
+            </p><p>
+With over 20 years of personal training experience, I now help people of all shapes, sizes and abilities discover what they're capable of – whether you're new to fitness or looking for your next challenge.
+            </p><p>
+If you're curious about HYROX, think of it as a fun, structured way to build real-world strength and stamina – no matter your age. Let’s train smart, train consistently, and feel great doing it.</p>
         </div>
         <img src="images/1.jpeg" alt="Richard Wilder" class="about-image">
     </section>
