--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     <section id="about" class="container py-5 d-flex align-items-center">
         <div class="about-text">
             <h2>About Me</h2>
-            <p>I'm Richard, a 50-something personal trainer and HYROX performance coach based in Cardiff. Back in the day, I was lucky enough to represent Wales and Great Britain, competing in international athletics – and I’ve never really stopped moving since.
+            <p>I'm Richard, a 50-something personal trainer and HYROX performance coach based in Cardiff. Back in the day, I was lucky enough to represent Wales and Great Britain, competing in international competitions – and I’ve never really stopped moving since.
             </P><p>
 These days, as well as chasing medals, I’m chasing longevity – working around the usual aches and niggles that come with age. I know first-hand what it takes to stay strong, injury-free, and motivated as we get older.
             </p><p>
