--- a/index.html
+++ b/index.html
@@ -291,7 +291,10 @@ If you're curious about HYROX, think of it as a fun, structured way to build rea
             <p><strong>Richard Wilder PT</strong></p>
             <p>Phone: <a href="tel:07815118647">07815 118647</a></p>
             <p>Email: <a href="mailto:richardwilderpt@outlook.com">richardwilderpt@outlook.com</a></p>
-            <form id="contact-form" class="mt-4">
+            <form id="contact-form" class="mt-4" 
+            action="https://formspree.io/f/mzzerdwy"
+            method="POST"
+            >
                 <input type="text" id="name" placeholder="Your Name" required class="form-control mb-3">
                 <input type="email" id="email" placeholder="Your Email" required class="form-control mb-3">
                 <textarea id="message" placeholder="Your Message" required class="form-control mb-3"></textarea>
