--- a/index.html
+++ b/index.html
@@ -293,13 +293,13 @@ If you're curious about HYROX, think of it as a fun, structured way to build rea
             <p>Email: <a href="mailto:richardwilderpt@outlook.com">richardwilderpt@outlook.com</a></p>
             <form id="contact-form" class="mt-4" 
             action="https://formspree.io/f/mzzerdwy"
-            method="POST"
-            >
-                <input type="text" id="name" placeholder="Your Name" required class="form-control mb-3">
-                <input type="email" id="email" placeholder="Your Email" required class="form-control mb-3">
-                <textarea id="message" placeholder="Your Message" required class="form-control mb-3"></textarea>
-                <button type="submit" class="btn btn-warning">Send Message</button>
-            </form>
+            method="POST">
+          <input type="text" id="name" name="name" placeholder="Your Name" required class="form-control mb-3">
+          <input type="email" id="email" name="email" placeholder="Your Email" required class="form-control mb-3">
+          <textarea id="message" name="message" placeholder="Your Message" required class="form-control mb-3"></textarea>
+          <button type="submit" class="btn btn-warning">Send Message</button>
+      </form>
+      
         </div>
 
         <!-- Instagram Embed (Without Heading) -->
